fixing spacing issues on hero

--- a/styles/index.css
+++ b/styles/index.css
@@ -118,7 +118,9 @@ body {
     font-family: var(--font-hero);
     font-weight: var(--weight-bolder);
     color: var(--brown-color);
-    letter-spacing: 1px;
+    
+    line-height: 0.95;
+    margin-bottom: 0.25em;
 
     align-self: center;
     justify-self: center;
@@ -137,6 +139,7 @@ body {
     color: var(--brown-color);
 
     margin-top: 1.25em;
+    width: 90%;
 }
 .hero-text-btn {
     grid-column: 1/4;
@@ -147,6 +150,7 @@ body {
     background: var(--red-color);
     color: var(--white-color);
     padding: 0.75em 3em;
+    margin-top: 0.5em;
     border-radius: 15px;
     text-decoration: none;
 
